# Yy3y3y

./: README.md  fix_lines.py  generate_terminal.py  metadata.json
.github/workflows/: build-apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/adb/: AdbMessage.kt  HistoryDatabase.kt  JniBridge.kt  SessionService.kt  TerminalViewModel.kt
app/src/main/java/com/example/adb/engine/: BinderAndHardwarePlugin.kt  BootAndFastbootPlugin.kt  CommandAnalysis.kt  CommandAnalyzerPlugin.kt  CommandExecutionEngine.kt  FrameworkPlugin.kt  KernelAndVfsPlugin.kt  SELinuxPlugin.kt  SystemPropertiesPlugin.kt
app/src/main/java/com/example/ui/: TerminalScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
rust-core/: Cargo.toml
rust-core/src/: adb_connection.rs  command_executor.rs  lib.rs  security_sandbox.rs  session_manager.rs  stream_handler.rs
